--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         <h3>🟦 Session 1: Keynote and Best Paper Presentation</h3>
         <p><span style="color: #005f73;"> <a href="https://app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzNjM=" target="_blank">Session chair: Ayesha Afzal - Erlangen National High Performance Computing Center (NHR@FAU), Geramny</a></span></p>
         <ul>
-            <li><span class="bold">9:05 a.m. – 9:40 a.m.</span> — Keynote speech with Q&A, <em>"Codesign for Energy Efficient Computing"</em> by <a href="https://app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzMDk=" target="_blank">John Shalf</a>; visit <a href="index.html#program">here</a> for more information.</li>
-	
+            <li><span class="bold">9:05 a.m. – 9:40 a.m.</span> — Keynote speech with Q&A, <em>"Codesign for Energy Efficient Computing"</em>; visit <a href="index.html#program">here</a> for more information.</li>
+		<p>Keynote speaker: <a href="https://app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzMDk=" target="_blank"> John Shalf</a> </p>	
 		<p>Institution: Lawrence Berkeley National Laboratory (LBNL)</p>
 		<p><a href="assets/EnergyEffficientComputing-ISC-EEHPC-2025.pdf">[Presentation slides]</a></p>
             <li><span class="bold">9:40 a.m. – 10:00 a.m.</span> — Best Paper talk with Q&A, <em>"What A Waste"</em> </li>
