--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <p><span style="color: #005f73;"> <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzMTQ=" target="_blank"> Session chair: Hatem Ltaief - King Abdullah University of Science and Technology, Saudi Arabia</a></span></p>
         <ul>
             <li><span class="bold">10:40 a.m. – 11:00 a.m.</span> — <em>"Running Energy-Efficient HPL on APUs: Strategies and Best Practices"</em> </li>
-				<p>Authors: <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzgwMTgwNTI=" target="_blank"> Jean-Yves Vet</a> and Gabriel Hautreux </p>
+				<p>Authors: Jean-Yves Vet and <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzgwMTgwNTI=" target="_blank"> Gabriel Hautreux </a>  </p>
 						 <p>Institutions: [1] HPE [2] CINES </p>
 				<p><a href="assets/EESP_ISC25_Energy_Efficient_MI300_Strategies_Vet_Hautreux.pdf">[Presentation slides]</a></p>
             <li><span class="bold">11:00 a.m. – 11:30 a.m.</span> — Coffee Break</li>
