--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <section id="announcements">
                     <h2>Announcements</h2>
 		<hr>
-			<h3> <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/planning/UGxhbm5pbmdfMjU4MTc2OA=="> Workshop</a> is happening now in Hall X3 - 1st floor!</h3>
+			<h3> <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/planning/UGxhbm5pbmdfMjU4MTc2OA=="> Workshop</a> is happening now in Hall X3 - 1st floor of CONGRESS CENTER HAMBURG!</h3>
 			
                     <hr>
 <h3>Workshop Program is Updated!</h3>
