--- a/index.html
+++ b/index.html
@@ -89,10 +89,13 @@
 <section id="schedule">
     <h2>Workshop Program Schedule</h2>
     <p style="font-style: italic;">Location: Hall X3 - 1st floor</p>
-    <div class="time-block"><span class="bold">9:00 a.m. – 9:05 a.m.</span> — Welcome remarks & Best Paper announcement</div>
-		<p>General chair: <a href="https://app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzNjM=" target="_blank"> Ayesha Afzal</a> </p>	
-		<p>Institution: Erlangen National High Performance Computing Center (NHR@FAU)</p>
-		<p><a href="assets/ISC_EESP_workshop_2025.pdf">[Presentation slides]</a></p>
+
+	<div class="time-block" style="background-color: #f0f8ff; border-left: 5px solid #005f73; padding: 10px; border-radius: 6px;">
+    <span class="bold">9:00 a.m. – 9:05 a.m.</span> — <strong>Welcome remarks & Best Paper announcement</strong>
+    <p>General chair: <a href="https://app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzNjM=" target="_blank">Ayesha Afzal</a></p>	
+    <p>Institution: Erlangen National High Performance Computing Center (NHR@FAU)</p>
+    <p><a href="assets/ISC_EESP_workshop_2025.pdf">[Presentation slides]</a></p>
+    </div>
     <div class="session blue">
         <h3>🟦 Session 1: Keynote and Best Paper Presentation</h3>
         <p><span style="color: #005f73;"> <a href="https://app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzNjM=" target="_blank">Session chair: Ayesha Afzal - Erlangen National High Performance Computing Center (NHR@FAU), Geramny</a></span></p>
