--- a/index.html
+++ b/index.html
@@ -291,7 +291,12 @@
             </div>
         </div>
     </main>
-
+</section>
+<section id="pastedition">
+<p style="margin:20px 0;">
+    <a href="2025.html">← EESP 2025</a>
+</p>
+	
     <footer>
         <p>&copy; 2025 EESP Workshop. All Rights Reserved.</p>
 	<p style="font-size: 0.8em;">The <a href="http://ayeshaafzal91.github.io/eesp">EESP25</a> site is maintained by <a href="https://sites.google.com/view/ayesha-afzal">Ayesha Afzal</a>.</p>
