--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EESP Workshop 2025</title>
+    <title>EESP Workshop 2026</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -13,14 +13,14 @@
         <img src="assets/eesp-logo.jpg" alt="EESP Workshop Logo" style="height: 150px; width: auto; flex-shrink: 0;">
     </div>
     <div style="text-align: center; flex-grow: 2;">
-        <h1>EESP Workshop 2025</h1>
+        <h1>EESP Workshop 2026</h1>
         <p>Energy Efficiency with Sustainable Performance: Techniques, Tools, and Best Practices</p>
-        <p>June 13, 2025, 9 am -- 1 pm, Hamburg, Germany</p>
-        <p>In conjunction with <a href="https://www.isc-hpc.com/" target="_blank" style="color: inherit; text-decoration: none;">ISC High Performance 2025</a></p>
+        <p>June 26, 2026, Hamburg, Germany</p>
+        <p>In conjunction with <a href="https://www.isc-hpc.com/" target="_blank" style="color: inherit; text-decoration: none;">ISC High Performance 2026</a></p>
     </div>
     <div style="flex: 1; text-align: right;">
         <a href="https://www.isc-hpc.com/" target="_blank">
-            <img src="assets/isc-logo.png" alt="ISC High Performance 2025 Logo" style="height: 125px; width: auto; vertical-align: middle;">
+            <img src="assets/isc-logo.png" alt="ISC High Performance 2026 Logo" style="height: 125px; width: auto; vertical-align: middle;">
         </a>
     </div>
 </header>
@@ -59,7 +59,7 @@
 
                 <section id="cfp">
                     <h2>Call for Papers</h2>
-                    <p>The EESP Workshop 2025 invites submissions of research papers focused on energy efficiency and sustainable performance in high-performance computing and artificial intelligence.</p>
+                    <p>The EESP Workshop 2026 invites submissions of research papers focused on energy efficiency and sustainable performance in high-performance computing and artificial intelligence.</p>
                     <ul>
                         <li><strong>Submission Guidelines</strong>
                             <ul>
@@ -92,20 +92,20 @@
 
 	<div class="time-block" style="background-color: #f0f8ff; border-left: 5px solid #005f73; padding: 10px; border-radius: 6px;">
     <span class="bold">9:00 a.m. – 9:05 a.m.</span> — <strong>Welcome remarks & Best Paper announcement</strong>
-    <p>General chair: <a href="https://app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzNjM=" target="_blank">Ayesha Afzal</a></p>	
+    <p>General chair: <a href="https://app.swapcard.com/event/isc-high-performance-2026/person/RXZlbnRQZW9wbGVfMzc5MzAzNjM=" target="_blank">Ayesha Afzal</a></p>	
     <p>Institution: Erlangen National High Performance Computing Center (NHR@FAU)</p>
-    <p><a href="assets/ISC_EESP_workshop_2025.pdf">[Presentation slides]</a></p>
+    <p><a href="assets/ISC_EESP_workshop_2026.pdf">[Presentation slides]</a></p>
     </div>
     <div class="session blue">
         <h3>🟦 Session 1: Keynote and Best Paper Presentation</h3>
-        <p><span style="color: #005f73;"> <a href="https://app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzNjM=" target="_blank">Session chair: Ayesha Afzal - Erlangen National High Performance Computing Center (NHR@FAU), Geramny</a></span></p>
+        <p><span style="color: #005f73;"> <a href="https://app.swapcard.com/event/isc-high-performance-2026/person/RXZlbnRQZW9wbGVfMzc5MzAzNjM=" target="_blank">Session chair: Ayesha Afzal - Erlangen National High Performance Computing Center (NHR@FAU), Geramny</a></span></p>
         <ul>
             <li><span class="bold">9:05 a.m. – 9:40 a.m.</span> — Keynote speech with Q&A, <em>"Codesign for Energy Efficient Computing"</em>; visit <a href="index.html#program">here</a> for more information.</li>
-		<p>Keynote speaker: <a href="https://app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzMDk=" target="_blank"> John Shalf</a> </p>	
+		<p>Keynote speaker: <a href="https://app.swapcard.com/event/isc-high-performance-2026/person/RXZlbnRQZW9wbGVfMzc5MzAzMDk=" target="_blank"> John Shalf</a> </p>	
 		<p>Institution: Lawrence Berkeley National Laboratory (LBNL)</p>
-		<p><a href="assets/EnergyEffficientComputing-ISC-EEHPC-2025.pdf">[Presentation slides]</a></p>
+		<p><a href="assets/EnergyEffficientComputing-ISC-EEHPC-2026.pdf">[Presentation slides]</a></p>
             <li><span class="bold">9:40 a.m. – 10:00 a.m.</span> — Best Paper talk with Q&A, <em>"What A Waste"</em> </li>
-								<p>Authors: <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzkxMTk1MDk=" target="_blank"> Shaina Smith</a>, Jordan M. Abt, and Ryan E. Grant </p>
+								<p>Authors: <a href="https://isc.app.swapcard.com/event/isc-high-performance-2026/person/RXZlbnRQZW9wbGVfMzkxMTk1MDk=" target="_blank"> Shaina Smith</a>, Jordan M. Abt, and Ryan E. Grant </p>
 		 <p>Institution: Queen's university</p>
 					    <p><a href="assets/ISCPaperPresentation.pdf">[Presentation slides]</a></p>
         </ul>
@@ -113,14 +113,14 @@
 
     <div class="session green">
         <h3>🟩 Session 2: Energy-Efficient GPU Computing</h3> 
-        <p><span style="color: #005f73;"> <a href="https://app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzgzMzY2MDI=" target="_blank">Session chair: Zhengji Zhao - Lawrence Berkeley National Laboratory (NERSC), USA</a></span></p>
+        <p><span style="color: #005f73;"> <a href="https://app.swapcard.com/event/isc-high-performance-2026/person/RXZlbnRQZW9wbGVfMzgzMzY2MDI=" target="_blank">Session chair: Zhengji Zhao - Lawrence Berkeley National Laboratory (NERSC), USA</a></span></p>
         <ul>
             <li><span class="bold">10:00 a.m. – 10:20 a.m.</span> — <em>"Experience on clock rate adjustment for energy-efficient GPU-accelerated real-world codes"</em> </li>
-						<p>Authors: <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzkxMDY2NTk=" target="_blank"> Giorgio Amati</a>, Matteo Turisini, Andrea Monterubbiano, Mattia Paladino, Elisabetta Boella, Daniele Gregori, and Danilo Croce </p>
+						<p>Authors: <a href="https://isc.app.swapcard.com/event/isc-high-performance-2026/person/RXZlbnRQZW9wbGVfMzkxMDY2NTk=" target="_blank"> Giorgio Amati</a>, Matteo Turisini, Andrea Monterubbiano, Mattia Paladino, Elisabetta Boella, Daniele Gregori, and Danilo Croce </p>
 				 <p>Institutions: [1] CINECA, Rome, Italy [2] E4 Computer Engineering SpA, Scandiano, Italy [3] Tor Vergata University, Rome, Italy </p>
-		<p><a href="assets/EESP2025-Amati.pdf">[Presentation slides]</a></p>
+		<p><a href="assets/EESP2026-Amati.pdf">[Presentation slides]</a></p>
             <li><span class="bold">10:20 a.m. – 10:40 a.m.</span> — <em>"Characterizing GPU Energy Usage in Exascale-Ready Portable Science Applications"</em> </li>
-						<p>Authors: William Godoy, Oscar Hernandez, Paul Kent, <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzk3MTE1OTE=" target="_blank"> Maria Patrou</a>, Kazi Asifuzzaman, Narasinga Miniskar, Pedro Valero-Lara, Jeffrey Vetter, Matthew Sinclair, Jason Lowe-Power, and Bobby Bruce </p>
+						<p>Authors: William Godoy, Oscar Hernandez, Paul Kent, <a href="https://isc.app.swapcard.com/event/isc-high-performance-2026/person/RXZlbnRQZW9wbGVfMzk3MTE1OTE=" target="_blank"> Maria Patrou</a>, Kazi Asifuzzaman, Narasinga Miniskar, Pedro Valero-Lara, Jeffrey Vetter, Matthew Sinclair, Jason Lowe-Power, and Bobby Bruce </p>
 				 <p>Institutions: [1] Oak Ridge National Laboratory, Oak Ridge, Tennessee, USA [2] University of Wisconsin-Madison, Madison, Wisconsin, USA [3] University of California Davis, Davis, California, USA </p>
 		<p><a href="assets/ISC25-EESP-GPU-Energy-Apps_final.pdf">[Presentation slides]</a></p>
         </ul>
@@ -128,16 +128,16 @@
 
     <div class="session yellow">
         <h3>🟨 Session 3: System-Level Strategies for Energy-Efficient Computing</h3>
-        <p><span style="color: #005f73;"> <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzMTQ=" target="_blank"> Session chair: Hatem Ltaief - King Abdullah University of Science and Technology, Saudi Arabia</a></span></p>
+        <p><span style="color: #005f73;"> <a href="https://isc.app.swapcard.com/event/isc-high-performance-2026/person/RXZlbnRQZW9wbGVfMzc5MzAzMTQ=" target="_blank"> Session chair: Hatem Ltaief - King Abdullah University of Science and Technology, Saudi Arabia</a></span></p>
         <ul>
             <li><span class="bold">10:40 a.m. – 11:00 a.m.</span> — <em>"Running Energy-Efficient HPL on APUs: Strategies and Best Practices"</em> </li>
-				<p>Authors: Jean-Yves Vet and <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzgwMTgwNTI=" target="_blank"> Gabriel Hautreux </a>  </p>
+				<p>Authors: Jean-Yves Vet and <a href="https://isc.app.swapcard.com/event/isc-high-performance-2026/person/RXZlbnRQZW9wbGVfMzgwMTgwNTI=" target="_blank"> Gabriel Hautreux </a>  </p>
 						 <p>Institutions: [1] HPE [2] CINES </p>
 				<p><a href="assets/EESP_ISC25_Energy_Efficient_MI300_Strategies_Vet_Hautreux.pdf">[Presentation slides]</a></p>
             <li><span class="bold">11:00 a.m. – 11:30 a.m.</span> — Coffee Break</li>
 						 <p></p>		
             <li><span class="bold">11:30 a.m. – 11:50 a.m.</span> — <em>"DARE-ML: Democratized Accessible Resource Environment for Machine Learning in the SUPERCOM platform"</em> </li>
-		<p>Authors: <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzk3MTE1OTA=" target="_blank"> Matteo Mendula</a>, Caterina Leonelli, Marco Miozzo, and Paolo Dini </p>
+		<p>Authors: <a href="https://isc.app.swapcard.com/event/isc-high-performance-2026/person/RXZlbnRQZW9wbGVfMzk3MTE1OTA=" target="_blank"> Matteo Mendula</a>, Caterina Leonelli, Marco Miozzo, and Paolo Dini </p>
 				 <p>Institutions: [1] Centre Tecnològic de Telecomunicacions de Catalunya (CTTC) [2] University of Bologna </p>
 		<p><a href="assets/DARE-MLv2.pdf">[Presentation slides]</a></p>
         </ul>
@@ -145,20 +145,20 @@
 
     <div class="session orange">
         <h3>🟧 Session 4: Power Profiling and Energy Tuning Techniques</h3>
-        <p><span style="color: #005f73;"> <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzNTQ=" target="_blank">Session chair: Fumiyoshi Shoji - RIKEN Center for Computational Science (R-CCS), Japan</a></span></p>
+        <p><span style="color: #005f73;"> <a href="https://isc.app.swapcard.com/event/isc-high-performance-2026/person/RXZlbnRQZW9wbGVfMzc5MzAzNTQ=" target="_blank">Session chair: Fumiyoshi Shoji - RIKEN Center for Computational Science (R-CCS), Japan</a></span></p>
         <ul>
             <li><span class="bold">11:50 a.m. – 12:10 p.m.</span> — <em>"Pinpointing Idle-Power Regressions in Linux"</em> </li>
-							<p>Authors: <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzkzNjY4MDc=" target="_blank"> Hannes Tröpgen</a>, Till Smejkal, Thomas Ilsche, Robert Schöne, and Horst Schirmeier </p>
+							<p>Authors: <a href="https://isc.app.swapcard.com/event/isc-high-performance-2026/person/RXZlbnRQZW9wbGVfMzkzNjY4MDc=" target="_blank"> Hannes Tröpgen</a>, Till Smejkal, Thomas Ilsche, Robert Schöne, and Horst Schirmeier </p>
 					 <p>Institutions: [1] ZIH, CIDS, TU Dresden [2] Chair of Operating Systems, Faculty of CS, TU Dresden </p>
 					 <p><a href="assets/presentation_eesp_linux_bisection.pdf">[Presentation slides]</a></p>
             <li><span class="bold">12:10 p.m. – 12:30 p.m.</span> — <em>"Power-Capping Metric Evaluation for Improving Energy Efficiency in HPC Applications"</em> </li>
-					<p>Authors: <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzk3MTE1OTE=" target="_blank"> Maria Patrou</a>, Thomas Wang, Wael Elwasif, Markus Eisenbach, Ross Miller, Oscar Hernandez, and William Godoy </p>
+					<p>Authors: <a href="https://isc.app.swapcard.com/event/isc-high-performance-2026/person/RXZlbnRQZW9wbGVfMzk3MTE1OTE=" target="_blank"> Maria Patrou</a>, Thomas Wang, Wael Elwasif, Markus Eisenbach, Ross Miller, Oscar Hernandez, and William Godoy </p>
 					 <p>Institutions: [1] Oak Ridge National Laboratory, Oak Ridge, Tennessee, USA [2] Camas High School, Camas, Washington, USA </p>
 		<p><a href="assets/Power_Capping_EESP25_final.pdf">[Presentation slides]</a></p>
             <li><span class="bold">12:30 p.m. – 12:50 p.m.</span> — <em>"Analysis of Application Power Characteristics Using Performance Counters on A64FX"</em> </li>
-			<p>Authors: <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzkwNDUzMjg=" target="_blank"> Ryoma Ohara</a>, Keiji Yamamoto, and Toshihiro Hanawa </p>
+			<p>Authors: <a href="https://isc.app.swapcard.com/event/isc-high-performance-2026/person/RXZlbnRQZW9wbGVfMzkwNDUzMjg=" target="_blank"> Ryoma Ohara</a>, Keiji Yamamoto, and Toshihiro Hanawa </p>
 					 <p> Institutions: [1] The University of Tokyo, Japan [2]  R-CCS, RIKEN </p>
-		<p><a href="assets/EESP2025_slide_ohara.pdf">[Presentation slides]</a></p>
+		<p><a href="assets/EESP2026_slide_ohara.pdf">[Presentation slides]</a></p>
         </ul>
     </div>
 
@@ -252,8 +252,11 @@
                         </ul>
                     </section>
 
-
-
+				<section id="pastedition">
+					<h2>Past Edition</h2>
+				    <p><a href="2026.html">← EESP 2026</a></p>
+				</section>
+				
                 <section id="contact">
                     <h2>Contact</h2>
                     <p>For questions, please contact the General Chair: <strong>Ayesha Afzal</strong> at <a href="mailto:ayesha.afzal@fau.de">ayesha.afzal@fau.de</a>.</p>
@@ -264,7 +267,7 @@
                 <section id="announcements">
                     <h2>Announcements</h2>
 		<hr>
-			<h3> <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/planning/UGxhbm5pbmdfMjU4MTc2OA=="> Workshop</a> is happening now in Hall X3 - 1st floor of CONGRESS CENTER HAMBURG!</h3>
+			<h3> <a href="https://isc.app.swapcard.com/event/isc-high-performance-2026/planning/UGxhbm5pbmdfMjU4MTc2OA=="> Workshop</a> is happening now in Hall X3 - 1st floor of CONGRESS CENTER HAMBURG!</h3>
 			
                     <hr>
 <h3>Workshop Program is Updated!</h3>
@@ -280,25 +283,21 @@
 		<hr> <h3>CFP Closed and Keynote Announced!</h3> 
 			<p> The Call for Papers is now closed, and the keynote speech by John Shalf has been announced.</p> <hr>
                     <h3>Call for Paper Open!</h3>
-                    <p>Submission for EESP 2025 proceedings is open. Check the technical details <a href="#cfp">here</a>.</p> <hr>
+                    <p>Submission for EESP 2026 proceedings is open. Check the technical details <a href="#cfp">here</a>.</p> <hr>
                     <h3>Important Dates</h3>
                     <ul>
-                        <li>Submission deadline: <del>February 20, 2025</del> <strong>March 2, 2025, AoE (firm)</strong></li>
-                        <li>Notification: April 2, 2025, AoE</li>
-                        <li>Camera ready deadline: May 16, 2025, AoE</li>
+                        <li>Submission deadline: <del>February 20, 2026</del> <strong>March 2, 2026, AoE (firm)</strong></li>
+                        <li>Notification: April 2, 2026, AoE</li>
+                        <li>Camera ready deadline: May 16, 2026, AoE</li>
                     </ul>
                 </section>
             </div>
         </div>
     </main>
 </section>
-<section id="pastedition">
-<p style="margin:20px 0;">
-    <a href="2025.html">← EESP 2025</a>
-</p>
 	
     <footer>
-        <p>&copy; 2025 EESP Workshop. All Rights Reserved.</p>
+        <p>&copy; 2026 EESP Workshop. All Rights Reserved.</p>
 	<p style="font-size: 0.8em;">The <a href="http://ayeshaafzal91.github.io/eesp">EESP25</a> site is maintained by <a href="https://sites.google.com/view/ayesha-afzal">Ayesha Afzal</a>.</p>
     </footer>
 </body>
