--- a/index.html
+++ b/index.html
@@ -266,29 +266,13 @@
             <div style="flex: 1; padding-left: 20px;">
                 <section id="announcements">
                     <h2>Announcements</h2>
-		<hr>
-			<h3> <a href="https://isc.app.swapcard.com/event/isc-high-performance-2026/planning/UGxhbm5pbmdfMjU4MTc2OA=="> Workshop</a> is happening now in Hall X3 - 1st floor of CONGRESS CENTER HAMBURG!</h3>
-			
-                    <hr>
-<h3>Workshop Program is Updated!</h3>
-<p>
-    John Shalf from Lawrence Berkeley National Laboratory (LBNL) will give the keynote speech on 
-    <em>"Codesign for Energy Efficient Computing"</em>. 
-    Eight papers are accepted after rigorous reviews from our program committee members, with one best paper.
-</p>
-<p>
-    More information about the <a href="index.html#schedule">program</a>.
-</p>
-
-		<hr> <h3>CFP Closed and Keynote Announced!</h3> 
-			<p> The Call for Papers is now closed, and the keynote speech by John Shalf has been announced.</p> <hr>
                     <h3>Call for Paper Open!</h3>
                     <p>Submission for EESP 2026 proceedings is open. Check the technical details <a href="#cfp">here</a>.</p> <hr>
                     <h3>Important Dates</h3>
                     <ul>
-                        <li>Submission deadline: <del>February 20, 2026</del> <strong>March 2, 2026, AoE (firm)</strong></li>
-                        <li>Notification: April 2, 2026, AoE</li>
-                        <li>Camera ready deadline: May 16, 2026, AoE</li>
+                        <li>Submission deadline: March 1, 2026, AoE</li>
+                        <li>Notification: April 14, 2026, AoE</li>
+                        <li>Camera ready deadline: May 26, 2026, AoE</li>
                     </ul>
                 </section>
             </div>
