--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
                         <li><strong>Review Process</strong>
                             <ul>
                                 <li>Each submission will undergo a minimum of three single-blind peer reviews.</li>
-                                <li>Review criteria include originality, technical soundness, impact, and quality of presentation.</li>
-                            </ul>
+                                <li>Review criteria include originality, technical soundness, impact, and quality of presentation.</li
+								<li>The <strong>Best Paper Award</strong> will be selected by the workshop program and organizing committee according to the established review criteria.</li>                            
+							</ul>
                         </li>
                         <li><strong>Post-Submission</strong>
                             <ul>
