--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 
                     <h4>Program Co-Chairs</h4>
                     <ul>
-                        <li>Sarah Neuwirth - Johannes Gutenberg University Mainz</li>
                         <li>Natalie Bates - Energy Efficient HPC Working Group (EE HPC WG)</li>
-                        <li>Siddhartha Jana - Intel</li>
+                        <li>Hatem Ltaief - King Abdullah University of Science and Technology (KAUST)</li>
+                        <li>Bronis R. de Supinski - Lawrence Livermore National Laboratory (LLNL)</li>
                     </ul>
 
                     <h4>Proceedings Chair</h4>
