--- a/index.html
+++ b/index.html
@@ -106,40 +106,7 @@
                     <p>Radita Liem - RWTH Aachen University</p>
 
                     <h2 class="theme-color">Program Committee</h2>
-                    <ul>
-                        <li><span style="color: #005f73;">Aditya Deshpande</span> - Samsung Semiconductor, USA</li>  
-                        <li><span style="color: #005f73;">Andy Turner</span> - University of Leeds, England</li>
-                        <li><span style="color: #005f73;">Aleksandar Ilic</span> - University of Lisbon, Portugal</li>
-                        <li><span style="color: #005f73;">Arthur F. Lorenzon</span> - UFRGS, Brazil</li>
-                        <li><span style="color: #005f73;">Bronis De Supinski</span> - Lawrence Livermore National Laboratory, USA</li>
-                        <li><span style="color: #005f73;">Can Hankendi</span> - Boston University, USA</li> 
-                        <li><span style="color: #005f73;">Dirk Pleiter</span> - KTH Royal Institute of Technology, Sweden</li>
-                        <li><span style="color: #005f73;">Diana Goehringer</span> - Technische Universität Dresden, Germany</li>
-                        <li><span style="color: #005f73;">Fumiyoshi Shoji</span> - RIKEN Center for Computational Science, Japan</li>
-                        <li><span style="color: #005f73;">Florina M. Ciorba</span> - University of Basel, Switzerland</li>
-                        <li><span style="color: #005f73;">Gabriel Hautreux</span> - National Computer Center for Higher Education (CINES), France</li>
-                        <li><span style="color: #005f73;">Georg Hager</span> - Regionales Rechenzentrum Erlangen (RRZE), Germany</li>
-                        <li><span style="color: #005f73;">Hatem	Ltaief</span> - King Abdullah University of Science and Technology, Saudi Arabia</li>        
-                        <li><span style="color: #005f73;">Harald Köstler</span> - Friedrich-Alexander-Universität Erlangen-Nürnberg, Germany</li>
-                        <li><span style="color: #005f73;">Kento Sato</span> - RIKEN Center for Computational Science, Japan</li>
-                        <li><span style="color: #005f73;">Markus Diesmann</span> - Forschungszentrum Jülich, Germany</li>  
-                        <li><span style="color: #005f73;">Markus Rampp</span> - Max Planck Computing and Data Facility, Germany</li>
-                        <li><span style="color: #005f73;">Martin Frank</span> - Karlsruhe Institute of Technology, Germany</li>
-                        <li><span style="color: #005f73;">Matthias Maiterth</span> - Oak Ridge National Laboratory, USA</li>
-                        <li><span style="color: #005f73;">Michael Ott</span> - Leibniz Supercomputing Centre, Germany</li>
-                        <li><span style="color: #005f73;">Nathan R. Tallent</span> - Pacific Northwest National Laboratory, USA</li> 
-                        <li><span style="color: #005f73;">Paolo	Bientinesi</span> - Umeå University, Sweden</li>
-                        <li><span style="color: #005f73;">Ralf Schneider</span> - High Performance Computing Center Stuttgart, Germany</li>
-                        <li><span style="color: #005f73;">Radu Prodan</span> - University of Klagenfurt, Austria</li>
-                        <li><span style="color: #005f73;">Raphael Vitti</span> - Lawrence Berkeley National Laboratory, USA</li>
-                        <li><span style="color: #005f73;">Robert Schöne</span> - Technische Universität Dresden, Germany</li>      
-                        <li><span style="color: #005f73;">Roman Wyrzykowski</span> - Czestochowa University of Technology, Poland</li>
-                        <li><span style="color: #005f73;">Ryan E. Grant</span> - Queen's University, Canada</li>
-                        <li><span style="color: #005f73;">Stefano Markidis</span> - KTH Royal Institute of Technology, Sweden</li>
-                        <li><span style="color: #005f73;">Thomas Gruber</span> - Erlangen National High Performance Computing Center, Germany</li>
-                        <li><span style="color: #005f73;">Ondřej Vysocký</span> - IT4Innovations National Supercomputing Center, Czech Republic</li>
-                        <li><span style="color: #005f73;">Zhengji Zhao</span> - Lawrence Berkeley National Laboratory, USA</li>
-                    </ul>
+                    TBA
                     </section>
 
                     <section id="collaborators">
