--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 <header style="display: flex; justify-content: space-between; align-items: center;">
     <div style="flex: 1; text-align: left;">
-        <img src="assets/eesp-logo.jpg" alt="EESP Workshop Logo" style="height: 150px; width: auto; flex-shrink: 0;">
+        <img src="assets/eesp-logo-2026.png" alt="EESP Workshop Logo" style="height: 150px; width: auto; flex-shrink: 0;">
     </div>
     <div style="text-align: center; flex-grow: 2;">
         <h1>EESP Workshop 2026</h1>
