--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
                     <h2>Workshop General Chair</h2>
                     <div style="display: flex; align-items: center;">
                         <img src="assets/Ayesha.jpg" alt="Ayesha Afzal Photo" style="height: 100px; width: auto; border-radius: 50%; margin-right: 15px;">
-                        <p><strong style="color: #005f73;">Ayesha Afzal</strong> - Erlangen National High Performance Computing Center (NHR@FAU)</p>
-                    </div>
+                        <p><strong style="color: #005f73;"><a href="https://hpc.fau.de/person/ayesha-afzal">Ayesha Afzal</a></strong> - Erlangen National High Performance Computing Center (NHR@FAU)</p>
+                    </div> 
 
                     <h4>Program Co-Chairs</h4>
                     <ul>
                         <li>Natalie Bates - Energy Efficient HPC Working Group (EE HPC WG)</li>
-                        <li>Hatem Ltaief - King Abdullah University of Science and Technology (KAUST)</li>
-                        <li>Bronis R. de Supinski - Lawrence Livermore National Laboratory (LLNL)</li>
+                        <li><a href="https://cemse.kaust.edu.sa/profiles/hatem-ltaief">Hatem Ltaief</a> - King Abdullah University of Science and Technology (KAUST)</li>
+                        <li><a href="https://people.llnl.gov/desupinski1">Bronis R. de Supinski</a> - Lawrence Livermore National Laboratory (LLNL)</li>
                     </ul>
 
                     <h4>Proceedings Chair</h4>
