--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 <li>Papers should be either <strong>short</strong> (work-in-progress, 6 pages) or <strong>regular</strong> (12 pages), including references and appendices.</li>
                                 <li>Submitted papers must be original and not previously published or under review for any other conference or journal.</li>
                                 <li>Use the <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines" target="_blank">Springer Lecture Notes in Computer Science (LNCS) template</a>.</li>
-                                <li>Submit papers in PDF format through the EasyChair submission system at <a href="https://easychair.org/conferences?conf=eesp25" target="_blank">https://easychair.org/conferences?conf=eesp25</a>.</li>
+                                <li>Submit papers in PDF format through the ISC Linklings submission system (Link: TBA).</li>
                             </ul>
                         </li>
                         <li><strong>Review Process</strong>
@@ -80,8 +80,8 @@
                             <ul>
                                 <li>Accepted papers will be published as part of the <strong>ISC proceedings in the Springer LNCS series</strong>.</li>
                                 <li>There is an option for submitting <strong>two additional pages</strong> after the review to address reviewer feedback.</li>
-				<li>One author must present the accepted paper in person and <a href="https://isc-hpc.com/attendance/registration" target="_blank">register for the ISC 'Workshop Pass.'</a></li>
-				<li>The <strong>Best Paper Award</strong> will be presented in person at the workshop.</li>
+								<li>One author must present the accepted paper in person and <a href="https://isc-hpc.com/attendance/registration" target="_blank">register for the ISC 'Workshop Pass.'</a></li>
+								<li>The Best Paper Award will be presented in person at the workshop.</li>
                             </ul>
                         </li>
                     </ul>
@@ -101,9 +101,6 @@
                         <li><a href="https://cemse.kaust.edu.sa/profiles/hatem-ltaief">Hatem Ltaief</a> - King Abdullah University of Science and Technology (KAUST)</li>
                         <li><a href="https://people.llnl.gov/desupinski1">Bronis R. de Supinski</a> - Lawrence Livermore National Laboratory (LLNL)</li>
                     </ul>
-
-                    <h4>Proceedings Chair</h4>
-                    <p>Radita Liem - RWTH Aachen University</p>
 
                     <h2 class="theme-color">Program Committee</h2>
                     TBA
