--- a/index.html
+++ b/index.html
@@ -41,20 +41,24 @@
 
                 <section id="topics">
                     <h2>Topics of Interest</h2>
-                    <p>The workshop aims to benefit the broader community by sharing use cases, lessons learned, and best practices through descriptive papers. We solicit papers which encompass the following topics of interest, but are not limited to:</p>
-                    <ul>
-                        <li>Energy efficiency analysis in computing environments</li>
-                        <li>Energy-aware software optimization techniques for HPC & AI</li>
-                        <li>Energy-efficient hardware architectures and practices for HPC & AI</li>
-                        <li>Energy-efficient scheduling and resource management</li>
-                        <li>Energy-efficient data center administration and operation</li>
-                        <li>Metrics for energy-efficient sustainable performance</li>
-                        <li>Cluster-wide energy benchmarking with continuous regression analysis</li>
-                        <li>Energy modeling, measurement and behavioral insights for CPUs and GPUs</li>
-                        <li>Tools for power and energy monitoring, management and control</li>
-                        <li>Renewable energy sources for HPC systems</li>
-                        <li>Emerging trends and future challenges in energy consumption (e.g., AI and machine learning workloads)</li>
-                    </ul>
+                    <p>The workshop aims to benefit the broader community by sharing use cases, lessons learned, and best practices through descriptive papers. To achieve the workshop's objectives and to address emerging challenges, we solicit papers which encompass the following topics of interest, but are not limited to:</p>
+					<ul>
+					    <li>Energy-aware software and application optimization;</li>
+					    <li>Programming models, compilers, and tools for energy-efficient computing;</li>
+					    <li>Energy-efficient hardware architectures and design practices;</li>
+					    <li>Energy-aware resource management, and power-steering runtimes;</li>
+					    <li>Operating system and network techniques for power and thermal control;</li>
+					    <li>Tools/frameworks for energy monitoring, instrumentation and analysis;</li>
+					    <li>Processor and system energy models including behavioral insights;</li>
+					    <li>Cluster-wide energy benchmarking and regression analysis;</li>
+					    <li>Comparative benchmarking of node architectures and memory systems;</li>
+					    <li>Analysis of long-term energy degradation in CPUs and GPUs;</li>
+					    <li>Renewable energy sources for HPC systems;</li>
+					    <li>Energy-efficient procurement frameworks and lifecycle cost analysis;</li>
+					    <li>Operational analytics and control for real-time power adaptation;</li>
+					    <li>Integration, energy/performance profiling and optimization of AI workloads;</li>
+					    <li>Emerging trends and challenges in HPC/AI energy consumption.</li>
+					</ul>
                 </section>
 
                 <section id="cfp">
@@ -97,7 +101,7 @@
 
                     <h4>Program Co-Chairs</h4>
                     <ul>
-                        <li>Natalie Bates - Energy Efficient HPC Working Group (EE HPC WG)</li>
+                        <li><a href="https://www.linkedin.com/in/natalie-bates-396998b">Natalie Bates</a> - Energy Efficient HPC Working Group (EE HPC WG)</li>
                         <li><a href="https://cemse.kaust.edu.sa/profiles/hatem-ltaief">Hatem Ltaief</a> - King Abdullah University of Science and Technology (KAUST)</li>
                         <li><a href="https://people.llnl.gov/desupinski1">Bronis R. de Supinski</a> - Lawrence Livermore National Laboratory (LLNL)</li>
                     </ul>
