--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
                     <h2>Topics of Interest</h2>
                     <p>The workshop aims to benefit the broader community by sharing use cases, lessons learned, and best practices through descriptive papers. To achieve the workshop's objectives and to address emerging challenges, we solicit papers which encompass the following topics of interest, but are not limited to:</p>
 					<ul>
-					    <li>Energy-aware software and application optimization;</li>
-					    <li>Programming models, compilers, and tools for energy-efficient computing;</li>
-					    <li>Energy-efficient hardware architectures and design practices;</li>
-					    <li>Energy-aware resource management, and power-steering runtimes;</li>
-					    <li>Operating system and network techniques for power and thermal control;</li>
-					    <li>Tools/frameworks for energy monitoring, instrumentation and analysis;</li>
-					    <li>Processor and system energy models including behavioral insights;</li>
-					    <li>Cluster-wide energy benchmarking and regression analysis;</li>
-					    <li>Comparative benchmarking of node architectures and memory systems;</li>
-					    <li>Analysis of long-term energy degradation in CPUs and GPUs;</li>
-					    <li>Renewable energy sources for HPC systems;</li>
-					    <li>Energy-efficient procurement frameworks and lifecycle cost analysis;</li>
-					    <li>Operational analytics and control for real-time power adaptation;</li>
-					    <li>Integration, energy/performance profiling and optimization of AI workloads;</li>
-					    <li>Emerging trends and challenges in HPC/AI energy consumption.</li>
+					    <li>Energy-aware software and application optimization</li>
+					    <li>Programming models, compilers, and tools for energy-efficient computing</li>
+					    <li>Energy-efficient hardware architectures and design practices</li>
+					    <li>Energy-aware resource management, and power-steering runtimes</li>
+					    <li>Operating system and network techniques for power and thermal control</li>
+					    <li>Tools/frameworks for energy monitoring, instrumentation and analysis</li>
+					    <li>Processor and system energy models including behavioral insights</li>
+					    <li>Cluster-wide energy benchmarking and regression analysis</li>
+					    <li>Comparative benchmarking of node architectures and memory systems</li>
+					    <li>Analysis of long-term energy degradation in CPUs and GPUs</li>
+					    <li>Renewable energy sources for HPC systems</li>
+					    <li>Energy-efficient procurement frameworks and lifecycle cost analysis</li>
+					    <li>Operational analytics and control for real-time power adaptation</li>
+					    <li>Integration, energy/performance profiling and optimization of AI workloads</li>
+					    <li>Emerging trends and challenges in HPC/AI energy consumption</li>
 					</ul>
                 </section>
 
