--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
                 </section>
 
                 <section id="scope">
-                    <h2>Workshop Scope</h2>
+                    <h2>Scope</h2>
 p>EESP invites academia, supercomputing centers, industry, national laboratories, and policymakers to collaborate on advancing energy-efficient practices. Topics include software development, hardware design, energy-efficient methods, operational case studies, benchmarking frameworks, AI–HPC convergence, and sustainability metrics beyond energy efficiency—such as carbon emissions—across computing environments including HPC clusters, data centers, and cloud infrastructure. The workshop fosters dialogue between Tier-0/1 and Tier-2 centers to help adapt Tier-0/1 innovations for more constrained budgets. It targets financial and technical solutions applicable to HPC clusters, data centers, and cloud infrastructures worldwide.</p>                </section>
 
                 <section id="topics">
