--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 <header style="display: flex; justify-content: space-between; align-items: center;">
     <div style="flex: 1; text-align: left;">
-        <img src="assets/eesp-logo-2026.png" alt="EESP Workshop Logo" style="height: 150px; width: auto; flex-shrink: 0;">
+        <img src="assets/eesp-logo-2026-compressed.png" alt="EESP Workshop Logo" style="height: 150px; width: auto; flex-shrink: 0;">
 		<br>
     <a href="assets/eesp-logo-2026.png" download="EESP_Workshop_Logo_2026" style="font-size: 0.9em; color: #005f73; text-decoration: none;">Download Logo</a>
     </div>
