--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <div style="flex: 1; text-align: right;">
         <a href="https://www.isc-hpc.com/" target="_blank">
             <img src="assets/isc-logo.png" alt="ISC High Performance 2026 Logo" style="height: 125px; width: auto; vertical-align: middle;">
+			<br>
+    <a href="assets/isc-logo.png" download="ISC_HPC_Logo_2026" style="font-size: 0.9em; color: white; text-decoration: none;">Download Logo</a>
         </a>
     </div>
 </header>
