--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div style="text-align: center; flex-grow: 2;">
         <h1>EESP Workshop 2026</h1>
-        <p>Energy Efficiency with Sustainable Performance: Techniques, Tools, and Best Practices</p>
+        <p>2nd Workshop on Energy Efficiency with Sustainable Performance: Techniques, Tools, and Best Practices</p>
         <p>June 26, 2026, Hamburg, Germany</p>
         <p>In conjunction with <a href="https://www.isc-hpc.com/" target="_blank" style="color: inherit; text-decoration: none;">ISC High Performance 2026</a></p>
     </div>
