--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
                                 <li>Accepted papers will be published as part of the <strong>ISC proceedings in the Springer LNCS series</strong>.</li>
                                 <li>There is an option for submitting <strong>two additional pages</strong> after the review to address reviewer feedback.</li>
 								<li>One author must present the accepted paper in person and <a href="https://isc-hpc.com/attendance/registration" target="_blank">register for the ISC 'Workshop Pass.'</a></li>
+								<li>Information on travel, visas, accommodation, and attractions in Hamburg is available on the <a href="https://isc-hpc.com/attendance" target="_blank">ISC 2026 website.</a></li>
 								<li>The Best Paper Award will be presented in person at the workshop.</li>
                             </ul>
                         </li>
