--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div style="text-align: center; flex-grow: 2;">
         <h1>EESP Workshop 2026</h1>
-        <p>2nd Workshop on Energy Efficiency with Sustainable Performance: Techniques, Tools, and Best Practices</p>
+        <p>2nd International Workshop on Energy Efficiency with Sustainable Performance: Techniques, Tools, and Best Practices</p>
         <p>June 26, 2026, Hamburg, Germany</p>
         <p>In conjunction with <a href="https://www.isc-hpc.com/" target="_blank" style="color: inherit; text-decoration: none;">ISC High Performance 2026</a></p>
     </div>
@@ -34,7 +34,7 @@
         <div style="display: flex;">
             <div style="flex: 3;">
                 <section id="objective">
-                    <h2>Workshop Objective</h2>
+                    <h2>Objective</h2>
                     <p>The EESP workshop fosters the exchange of innovative strategies, tools, and best practices to enhance energy efficiency in modern computing environments. With rising energy costs, increasing CO<sub>2</sub> emissions, and mounting pressure on power infrastructure, optimizing energy use has become a crucial priority for sustainable computing infrastructure.
 EESP workshop explores how to optimize computing environments by effectively balancing performance, power consumption, and sustainability trade-offs. It will provide participants a comprehensive guidebook featuring strategies tailored for exascale, Tier-1 and Tier-2 supercomputing centers. By learning about how to adopt greener, cost-effective, and energy-efficient practices, attendees will gain a competitive edge in driving sustainability across their systems.
 Aligned with the Sustainable Development Goals, the workshop encourages collaboration between HPC and AI communities to promote environmentally responsible innovation. It will provide guidance for system operators and facility managers on reducing Power Usage Effectiveness and sourcing green energy, while supporting users in making energy-conscious decisions through thoughtful experiment design. 
